--- a/public/temperature-visualization.html
+++ b/public/temperature-visualization.html
@@ -46,6 +46,9 @@
             color: #ffffff; /* Set link color to white */
             text-decoration: underline; /* Keep underline for clarity */
         }
+        .data-source-link {
+            font-size: 0.8em; /* Make the text smaller */
+        }
         .mode-toggle-bar {
             margin-bottom: 20px;
             display: flex;
@@ -498,7 +501,7 @@
 
                 descriptionElement.innerHTML = `
                     This visualization shows estimated global monthly average temperatures from January ${startYear} to December ${endYear}. Annual average temperatures range from <strong>${minAnnualAvgC.toFixed(1)}°C (${minAnnualAvgF.toFixed(1)}°F)</strong> to <strong>${maxAnnualAvgC.toFixed(1)}°C (${maxAnnualAvgF.toFixed(1)}°F)</strong>.
-                    Data source: <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/global/time-series/0,0/tavg/land_ocean/1/0/1850-2024" target="_blank">NOAA National Centers for Environmental Information (NCEI)</a>.
+                    <br><span class="data-source-link">Data source: <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/global/time-series/0,0/tavg/land_ocean/1/0/1850-2024" target="_blank">NOAA National Centers for Environmental Information (NCEI)</a></span>
                 `;
             } else { // anomaly mode
                 const annualAnomalies = {};
@@ -520,7 +523,7 @@
                 descriptionElement.innerHTML = `
                     This visualization shows global monthly temperature anomalies from January ${startYear} to December ${endYear},
                     relative to the 1850-1900 baseline.
-                    Data source: <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/global/time-series/0,0/tavg/land_ocean/1/0/1850-2024" target="_blank">NOAA National Centers for Environmental Information (NCEI)</a>.
+                    <br><span class="data-source-link">Data source: <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/global/time-series/0,0/tavg/land_ocean/1/0/1850-2024" target="_blank">NOAA National Centers for Environmental Information (NCEI)</a></span>
                 `;
             }
 
