Add Temperature Visualization to Projects page

--- a/public/projects.html
+++ b/public/projects.html
@@ -625,6 +625,7 @@
         <a class="toc" href="#berkeley-alumni">Berkeley Alumni Spotlight</a>
         <a class="toc" href="#templeton-alumni">Templeton Alumni Profile</a>
         <a class="toc" href="#portfolio">Portfolio Website</a>
+        <a class="toc" href="#global-temperature-visualization">Global Temperature Visualization</a>
         <div class="section-header">
         </div>
         <div class="card" id="android-build-time">
@@ -880,6 +881,15 @@
           <a href="https://github.com/cartland/cartland-dev" target="_blank" rel="noopener noreferrer"
             aria-label="View Portfolio Website" class="project-link">GitHub</a>
           <div class="tags">Web Development, HTML, CSS, JavaScript, CI/CD, Accessibility, Responsive Design</div>
+        </div>
+        <div class="card" id="global-temperature-visualization">
+          <div class="image-gradient-container">
+            <img src="/i/Temperature.png" alt="Global Temperature Visualization" loading="lazy">
+          </div>
+          <h2>Global Temperature Visualization</h2>
+          <p>I created an interactive data visualization of global surface temperatures from 1850 to the present. This project uses a large dataset to show monthly temperature anomalies compared to a baseline period, highlighting the long-term warming trend. The visualization is built with modern web technologies to provide an engaging and informative experience about climate change.</p>
+          <a href="temperature-visualization" class="project-link">Visualization</a>
+          <div class="tags">Data Visualization, Climate Change, Web Development, D3.js, HTML, CSS, JavaScript</div>
         </div>
       </div>
     </main>
